# GodotPP

./: .gitignore  CMakeLists.txt
cmake/: DownloadGodot.cmake
game/scenes/: Player.tscn  game.tscn  player.gd  player.gd.uid
src/godotpp/: CMakeLists.txt
src/godotpp/include/: LinkingContext.h  NetworkManager.h
src/godotpp/src/: LinkingContext.cpp  NetworkManager.cpp  register_types.cpp
src/server/: CMakeLists.txt
src/server/include/: LinkingContext.h  NetworkManager.h
src/server/include/Components/: Transform2DComponent.h
src/server/include/Entities/: EntityFactory.h  PlayerFactory.h
src/server/include/messages/: BaseMessage.h  MessageFactory.h  MessageSerializer.h  RequestConnectionMessage.h  SpawnMessage.h
src/server/src/: LinkingContext.cpp  NetworkManager.cpp  main.cpp
src/server/src/Components/: Transform2DComponent.cpp
src/server/src/Entities/: EntityFactory.cpp  PlayerFactory.cpp
src/server/src/messages/: MessageFactory.cpp  MessageSerializer.cpp
src/shared/messages/: BaseMessage.h  ErrorMessage.h  MessageFactory.cpp  MessageFactory.h  SpawnMessage.h
